--- a/array.html
+++ b/array.html
@@ -1,21 +1,24 @@
 <script>	
-alert("start21");
+alert("start22");
 var spray=new Array(0x800);
 var tmp;
- for(var i=0;i<spray.length;i+=2){
+ for(var i=0;i<spray.length;i++){
+  if(i%5==0){
  spray[i]=new Array(0x1e00);
- spray[i+1]=new Uint32Array(0x10000/4);
-  tmp=spray[i+1];
-  for(var j=0;j<0x10000/4;j+=2){
-   tmp[j]=i+1+0xAA000000;//(j<<12)+i;
-   tmp[j+1]=j+0xBB000000;
-  }
-  tmp[0]=i+1;
   tmp=spray[i];
  for(var j=0;j<0x1e00;j+=2){
   tmp[j]=spray;
   tmp[j+1]=i;
- }
+  }
+  }else{
+ spray[i]=new Uint32Array(0x10000/4);
+  tmp=spray[i];
+  for(var j=0;j<0x10000/4;j+=2){
+   tmp[j]=i+1+0xAA000000;//(j<<12)+i;
+   tmp[j+1]=j+0xBB000000;
+  }
+  }
+  
 }
 alert("spray done");
 function gc() {
