--- a/array.html
+++ b/array.html
@@ -1,6 +1,6 @@
 <script>	
-alert("start27");
-var spray=new Array(0xc00);
+alert("start28");
+var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i++){
   if(i%3==1){
