--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start45");
+alert("start46");
 function func(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -182,6 +182,6 @@ b+=" ";
 b+=s1.charCodeAt(a+7).toString(16);      
 alert(b);
 }
-alert(func());
+func();
 alert("end");
 </script>
