--- a/array.html
+++ b/array.html
@@ -1,11 +1,14 @@
 <script>	
-alert("start47");
-function func(){
+alert("start7");
+function func2(){
 for(var i=0;i<0x1000;i++){ 
 
  }
 }
 
+ function func(){
+  return 1
+ }
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i++){
