--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start66");
+alert("start65");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -7,7 +7,7 @@ for(var i=0;i<0x1000;i++){
 }
 
  function func(){
-  return 1
+  return 2
  }
  for (var i=0; i<0x1000; i++) {
   func()
@@ -188,6 +188,6 @@ b+=" ";
 b+=s1.charCodeAt(a+7).toString(16);      
 alert(b);
 }
-func();
+alert(func());
 alert("end");
 </script>
