--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start65");
+alert("start655");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -190,6 +190,6 @@ b+=" ";
 b+=s1.charCodeAt(a+7).toString(16);      
 alert(b);
 }
-func();
+alert(func());
 alert("end");
 </script>
