--- a/array.html
+++ b/array.html
@@ -2,8 +2,8 @@
 alert("start6");
 var flag=prompt("flag");
 if(flag!=0){
- return;
-}
+ 
+}else{
 function func2(){
 for(var i=0;i<0x1000;i++){ 
 
@@ -234,4 +234,5 @@ b+=s1.charCodeAt(a+7).toString(16);
 alert(b);
 }
 alert("end");
+}
 </script>
