--- a/array.html
+++ b/array.html
@@ -13,7 +13,7 @@ for(var i=0;i<0x1000;i++){
  function func(){
   return 2
  }
- alert(func());
+ func();
  for (var i=0; i<0x1000; i++) {
   func()
  }
